--- a/client/src/index.html
+++ b/client/src/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' href="style/style.css">
     <title>Beaned Cans!</title>
 </head>
 <body>
-    <img src = "assets/beaned_cans.jpg">
+    <img #beans src = "assets/beaned_cans.jpg">
     
     <script src = "server/server.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="/css"></script>
 </body>
 </html>
